[tool.poetry]
name = "dataviz"
version = "0.0.0"
description = ""
authors = ["Hongwei Ye <yehwhey@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
scipy = "^1.14.0"
scikit-learn = "^1.5.1"
streamlit = "^1.36.0"
plotly = "^5.22.0"
dash = "^2.17.1"
typer = "^0.12.3"
rich = "^13.7.1"
pydantic = "^2.8.2"
streamlit-aggrid = "^1.0.5"
dash-bio = "^1.0.2"
streamlit-pandas-profiling = "^0.1.3"
streamlit-plotly-events = "^0.0.6"
streamlit-extras = "^0.4.3"
streamlit-pydantic = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pynvim = "^0.5.0"
flake8 = "^7.1.0"
isort = "^5.13.2"
black = "^24.4.2"
prettier = "^0.0.7"
bpython = "^0.24"
jupyterlab = "^4.2.3"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = ["*/__version__.py"]
